# aoc22

./: Cargo.toml
src/: main.rs
