[package]
name = "advent_of_code"
version = "0.0.1"
authors = ["Mathieu Moalic <matmoa@pm.me>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
nom = "7.1.1"
pico-args = "0.5.0"
